Ride detail WIP

--- a/Sources/RideHistory/Resources/en.lproj/Localizable.strings
+++ b/Sources/RideHistory/Resources/en.lproj/Localizable.strings
@@ -1,3 +1,19 @@
 "booked" = "booked";
 "completed" = "completed";
 "cancelled" = "cancelled";
+"dispute subtitle" = "Report a problem with this customer";
+"lostAndFound subtitle" = "Notify the customer that you have found an object belonging to him/her.";
+"dispute title" = "Dispute";
+"lostAndFound title" = "Item found";
+"print ticket" = "Print the receipt";
+"cancel ride" = "cancel this ride";
+"%d pers. %d bag." = "%d pass. %d bag.";
+"ride detail" = "Ride detail";
+"amount stat" = "TARIF TTC";
+"distance stat" = "DISTANCE";
+"time stat" = "durée";
+"booked display" = "course\nà venir";
+"completed display" = "terminée";
+"cancelled display" = "course\nannulée";
+"immediate ride" = "course immédiate";
+"booked ride" = "course programmée";
