--- a/Sources/RideHistory/Resources/fr.lproj/Localizable.strings
+++ b/Sources/RideHistory/Resources/fr.lproj/Localizable.strings
@@ -1,3 +1,19 @@
 "booked" = "réservées";
 "completed" = "Terminées";
 "cancelled" = "Annulées";
+"dispute subtitle" = "Nous signaler un problème avec ce client";
+"lostAndFound subtitle" = "Prévenir le client que vous avez trouvé un objet lui appartenant";
+"dispute title" = "Litige";
+"lostAndFound title" = "Objet trouvé";
+"print ticket" = "Imprimer le reçu";
+"cancel ride" = "annuler cette course";
+"%d pers. %d bag." = "%d pers. %d bag.";
+"ride detail" = "Détail de la course";
+"amount stat" = "TARIF TTC";
+"distance stat" = "DISTANCE";
+"time stat" = "durée";
+"booked display" = "course\nà venir";
+"completed display" = "terminée";
+"cancelled display" = "course\nannulée";
+"immediate ride" = "course immédiate";
+"booked ride" = "course programmée";
