--- a/Sources/RideHistory/Resources/fr.lproj/Localizable.strings
+++ b/Sources/RideHistory/Resources/fr.lproj/Localizable.strings
@@ -1,4 +1,4 @@
-"booked" = "réservées";
+"booked" = "à venir";
 "completed" = "Terminées";
 "cancelled" = "Annulées";
 "dispute subtitle" = "Nous signaler un problème avec ce client";
