--- a/Sources/RideHistory/Resources/fr.lproj/Localizable.strings
+++ b/Sources/RideHistory/Resources/fr.lproj/Localizable.strings
@@ -26,3 +26,4 @@
 "passengerNotFound reason" = "Client absent";
 "otherReasonbyDriver reason" = "Autre raison";
 "cancelledyPassenger reason" = "Annulée par le client";
+"noRides" = "Aucune course dans cette catégorie";
